--- a/grocify/pubspec.yaml
+++ b/grocify/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   intl: ^0.17.0
   animated_splash_screen: ^1.3.0
   flutter_native_splash: ^2.4.4
+  google_nav_bar: ^5.0.7
 
 dev_dependencies:
   flutter_test:
