--- a/grocify/pubspec.yaml
+++ b/grocify/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   animated_splash_screen: ^1.3.0
   flutter_native_splash: ^2.4.4
   google_nav_bar: ^5.0.7
+  fluttertoast: ^8.2.12
 
 dev_dependencies:
   flutter_test:
