--- a/grocify/pubspec.yaml
+++ b/grocify/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   fluttertoast: ^8.2.12
   dio: ^5.8.0+1
   flutter_stripe: ^11.4.0
+  speech_to_text: ^7.0.0
 
 dev_dependencies:
   flutter_test:
